_old/dinoco_docs/src/content/v0.0.1/de-de/orm/relations.md
# Beziehungen

Beziehungen verbinden Models im Dinoco-Schema miteinander.

Diese Seite behandelt `@relation(...)`, `onDelete`, `onUpdate` und die gängigsten Beziehungsmuster.

---

## @relation(...)

Das Attribut `@relation(...)` definiert, wie zwei Models miteinander verbunden sind.

Unterstützte Parameter:

| Parameter    | Verwendung                                              |
| :----------- | :------------------------------------------------------ |
| `name`       | Expliziter Name der Beziehung                           |
| `fields`     | Lokale Felder, die als Schlüssel verwendet werden       |
| `references` | Referenzierte Felder im Ziel-Model                      |
| `onDelete`   | Verhalten beim Löschen des referenzierten Datensatzes   |
| `onUpdate`   | Verhalten beim Aktualisieren des referenzierten Wertes  |

Vollständiges Beispiel:

```dinoco
model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer?
	author   User?   @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

## onDelete und onUpdate

Dinoco bietet referenzielle Aktionen, um zu steuern, was passiert, wenn der verknüpfte Datensatz geändert oder entfernt wird.

Unterstützte Werte:

| Aktion         | Bedeutung                                                 |
| :------------- | :-------------------------------------------------------- |
| `Cascade`      | Propagiert die Operation auf abhängige Datensätze         |
| `SetNull`      | Setzt den Fremdschlüssel auf `null`                       |
| `SetDefault`   | Setzt den für das Feld konfigurierten Standardwert       |

Beispiel:

```dinoco
model Comment {
	id      Integer @id @default(autoincrement())
	postId  Integer?
	post    Post?   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

Verwenden Sie `SetNull` nur, wenn das lokale Feld optional ist.

## Eins zu viele

Dies ist die häufigste Beziehung: Ein übergeordneter Datensatz hat mehrere untergeordnete Datensätze.

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String
	posts Post[]
}

model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer
	author   User    @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}
```

Gedankliche Lesart:

- Ein `User` kann mehrere `Post`s haben.
- Jeder `Post` gehört zu einem einzigen `User`.

## Viele zu viele

Bei Viele-zu-viele-Beziehungen haben beide Seiten Listen.

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String

	roles Role[]
}

model Role {
	id    Integer @id @default(autoincrement())
	name  String

	users User[]
}
```

Gedankliche Lesart:

- Ein `User` kann mehrere `Role`s haben.
- Eine `Role` kann mehreren `User`n gehören.

## Selbstbeziehung

Eine Selbstbeziehung tritt auf, wenn ein Model mit sich selbst in Beziehung steht.

```dinoco
model User {
	id        Integer @id @default(autoincrement())
	name      String
	managerId Integer?
	manager   User?   @relation(name: "UserManager", fields: [managerId], references: [id], onDelete: SetNull, onUpdate: Cascade)
	reports   User[]  @relation(name: "UserManager")
}
```

Gedankliche Lesart:

- Ein Benutzer kann einen Manager haben.
- Ein Benutzer kann mehrere Untergebene haben.

## Praktische Tipps

- Verwenden Sie `name`, wenn es mehr als eine Beziehung zwischen denselben Models gibt.
- Verwenden Sie `onDelete: Cascade`, wenn das Kind ohne den Elternteil keinen Sinn ergibt.
- Verwenden Sie `onDelete: SetNull`, wenn die Beziehung aufgehoben werden kann, ohne den untergeordneten Datensatz zu entfernen.
- Verwenden Sie Selbstbeziehungen mit expliziten Namen, um die Lesbarkeit und Codegenerierung zu erleichtern.

## Referenzschema für die Beispiele

Die folgenden Beispiele verwenden das folgende Schema:

```dinoco
config {
	database = "sqlite"
	database_url = env("DATABASE_URL")
}

enum Role {
	ADMIN
	USER
}

model User {
	id             String     @id @default(uuid())
	username       String     @unique
	role           Role       @default(USER)

	profile        Profile?

	followers      User[]     @relation(name: "UserFollows")
	following      User[]     @relation(name: "UserFollows")

	posts          Post[]     @relation(name: "PostAuthor")
	comments       Comment[]  @relation(name: "CommentAuthor")

	likedPosts     Post[]     @relation(name: "PostLikers")
	likedComments  Comment[]  @relation(name: "CommentLikers")
}

model Profile {
	id      String   @id @default(uuid())
	bio     String?
	userId  String   @unique
	user    User     @relation(fields: [userId], references: [id])
}

model Post {
	id        String     @id @default(uuid())
	title     String
	content   String

	authorId  String
	author    User       @relation(name: "PostAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "PostLikers")

	comments  Comment[]

	tags      Tag[]
}

model Comment {
	id        String     @id @default(uuid())
	text      String

	parentId  String?
	parent    Comment?   @relation(name: "CommentReplies", fields: [parentId], references: [id])
	replies   Comment[]  @relation(name: "CommentReplies")

	postId    String
	post      Post       @relation(fields: [postId], references: [id])

	authorId  String
	author    User       @relation(name: "CommentAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "CommentLikers")
}

model Tag {
	id     String  @id @default(uuid())
	name   String  @unique

	posts  Post[]
}
```

## Beispiel für eine Abfrage mit allen möglichen Beziehungen ausgehend von User

Wenn Sie vom `User`-Model ausgehen und alle direkten Beziehungen in einer einzigen Leseabfrage laden möchten, können Sie `select::&lt;T&gt;()` mit mehreren `includes(...)` kombinieren.

```rust
use dinoco::{Extend, find_many};

#[derive(Debug, Clone, Extend)]
#[extend(Profile)]
struct ProfileView {
	id: String,
	bio: Option<String>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserRelationItem {
	id: String,
	username: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Tag)]
struct TagView {
	id: String,
	name: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentView {
	id: String,
	text: String,
	replies: Vec<CommentReplyView>,
	likers: Vec<UserRelationItem>,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentReplyView {
	id: String,
	text: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Post)]
struct PostView {
	id: String,
	title: String,
	content: String,
	likers: Vec<UserRelationItem>,
	tags: Vec<TagView>,
	comments: Vec<CommentView>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserWithAllRelations {
	id: String,
	username: String,
	profile: Option<ProfileView>,
	followers: Vec<UserRelationItem>,
	following: Vec<UserRelationItem>,
	posts: Vec<PostView>,
	comments: Vec<CommentView>,
	likedPosts: Vec<PostView>,
	likedComments: Vec<CommentView>,
}

let users = find_many::<User>()
	.select::<UserWithAllRelations>()
	.includes(|user| user.profile())
	.includes(|user| user.followers())
	.includes(|user| user.following())
	.includes(|user| {
		user.posts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.comments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.includes(|user| {
		user.likedPosts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.likedComments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.execute(&client)
	.await?;
```

Dieses Muster ist nützlich, wenn Sie eine umfassende Ansicht des Benutzers in einem einzigen beziehungsorientierten Lesevorgang erstellen möchten.

## Beispiel für einen Insert mit Beziehung unter Verwendung von User und Profile

Um einen Datensatz mit einer 1:1-Beziehung einzufügen, verwenden Sie `with_relation(...)`.

```rust
use dinoco::insert_into;

let created_user = insert_into::<User>()
	.values(User {
		id: "user-1".to_string(),
		username: "bia".to_string(),
		role: Role::USER,
	})
	.with_relation(Profile {
		id: "profile-1".to_string(),
		bio: Some("Software-Ingenieurin".to_string()),
		userId: String::new(),
	})
	.execute(&client)
	.await?;
```

In diesem Ablauf:

- Der `User` wird zuerst eingefügt.
- Das zugehörige `Profile` wird anschließend erstellt.
- Der `userId`-Schlüssel wird durch den Dinoco-Beziehungsfluss verknüpft.

## Beispiel für insert_many mit with_relations(...)

Verwenden Sie `with_relations(...)`, wenn Sie mehrere übergeordnete Datensätze einfügen und für jeden davon auch mehrere neue verwandte Datensätze einfügen möchten.

```rust
use dinoco::insert_many;

let posts = vec![
	Post {
		id: "post-1".to_string(),
		title: "Erster Beitrag".to_string(),
		content: "Inhalt des ersten Beitrags".to_string(),
		authorId: "user-1".to_string(),
	},
	Post {
		id: "post-2".to_string(),
		title: "Zweiter Beitrag".to_string(),
		content: "Inhalt des zweiten Beitrags".to_string(),
		authorId: "user-1".to_string(),
	},
];

let comments_per_post = vec![
	vec![
		Comment {
			id: "comment-1".to_string(),
			text: "Sehr gut".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-2".to_string(),
		},
		Comment {
			id: "comment-2".to_string(),
			text: "Mir gefiel das Beispiel".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-3".to_string(),
		},
	],
	vec![
		Comment {
			id: "comment-3".to_string(),
			text: "Ich möchte mehr Details".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-2".to_string(),
		},
	],
];

insert_many::<Post>()
	.values(posts)
	.with_relations(comments_per_post)
	.execute(&client)
	.await?;
```

In diesem Ablauf:

- Jeder `Post` wird eingefügt.
- Jede Gruppe in `comments_per_post` entspricht dem `Post` an derselben Position.
- Dinoco verknüpft die `Comment`s während des Schreibvorgangs mit dem richtigen Post.

## Beispiel für insert_many mit with_connections(...)

Verwenden Sie `with_connections(...)`, wenn Sie mehrere übergeordnete Datensätze einfügen und jeden davon mit mehreren bereits vorhandenen Datensätzen verbinden möchten.

```rust
use dinoco::insert_many;

insert_many::<Post>()
	.values(vec![
		Post {
			id: "post-10".to_string(),
			title: "Rust und Dinoco".to_string(),
			content: "Beitrag über Produktivität".to_string(),
			authorId: "user-1".to_string(),
		},
		Post {
			id: "post-11".to_string(),
			title: "Erweiterte Beziehungen".to_string(),
			content: "Beitrag über Includes und Beziehungen".to_string(),
			authorId: "user-1".to_string(),
		},
	])
	.with_connections(vec![
		vec![
			Tag { id: "tag-1".to_string(), name: "rust".to_string() },
			Tag { id: "tag-2".to_string(), name: "orm".to_string() },
		],
		vec![
			Tag { id: "tag-2".to_string(), name: "orm".to_string() },
			Tag { id: "tag-3".to_string(), name: "sqlite".to_string() },
		],
	])
	.execute(&client)
	.await?;
```

In diesem Ablauf:

- Die `Post`s werden eingefügt.
- Die bereits vorhandenen `Tag`s werden mit den entsprechenden Posts verbunden.
- Jede Gruppe des äußeren Vektors repräsentiert die Verbindungen des Posts an derselben Position.

## Nächste Schritte

- [**Enums**](/v0.0.1/orm/enums): Erfahren Sie, wie Sie kontrollierte Werte im Schema darstellen.
- [**Models**](/v0.0.1/orm/models): Erfahren Sie mehr über die Feldstruktur und Beispiele für Suche, Einfügen, Aktualisieren und Löschen mit der Dinoco API.
